--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-session": "^1.16.1",
     "jquery": "^3.4.0",
+    "mongoose": "^5.5.13",
+    "mongoose-double": "0.0.1",
     "mysql": "^2.16.0",
-    "nodemon": "^1.18.11",
     "path": "^0.12.7",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
